[package]
name = "game_girl"
version = "0.1.0"
authors = [ "mvdnes <git@mathijs.vd-nes.nl>", "riverdot" ]
edition = "2018"

[dependencies]
blip_buf = ">=0.1.3"
clap = "4"
cpal = "0.15"
glium = { version = "0.32", default_features = false, features = [ "glutin" ] }

[[bin]]
name = "game_girl"
test = false
doc = false
