[package]
name = "game_girl"
version = "0.1.0"
authors = [ "mvdnes <git@mathijs.vd-nes.nl>", "riverdot" ]
edition = "2018"

[dependencies]
blip_buf = ">=0.1.3"
clap = "4"
cpal = "0.15"
vulkano = "0.34.0"
winit = "0.28.0"

[profile.dev]
opt-level = 1 

[[bin]]
name = "game_girl"
test = false
doc = false
